minor visual bug fixes (pin list ui to bottom; bad spacing on edit token fields)

--- a/desk/bare/web/fund/style/fund.css
+++ b/desk/bare/web/fund/style/fund.css
@@ -64,6 +64,12 @@
 }
 
 
+/* Styling for 'stuck' elements (css-tricks.com/how-to-detect-when-a-sticky-element-gets-pinned) */
+.pinned {
+  width: 100%;
+}
+
+
 /* Auto-add indicators for required fields (https://stackoverflow.com/q/49685336) */
 input[required] + label:after,
 select[required] + label:after,
